# ffmovie

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  DEPS  build_ffmovie.sh  build_ffmpeg.sh  vendor.json
android/ffmovie/: export.def
include/ffmovie/: movie.h
include/pag/: decoder.h
ios/: ffmovie.lds
ios/FFMovie.xcodeproj/: project.pbxproj
ios/FFMovie.xcodeproj/project.xcworkspace/xcuserdata/partyhuang.xcuserdatad/: UserInterfaceState.xcuserstate
ios/FFMovie.xcodeproj/xcshareddata/xcschemes/: FFMovie.xcscheme
ios/FFMovie.xcodeproj/xcuserdata/partyhuang.xcuserdatad/xcschemes/: xcschememanagement.plist
scripts/: build_ffmpeg_android.sh  build_ffmpeg_ios.sh  build_ffmpeg_linux.sh  build_ffmpeg_mac.sh  build_ffmpeg_web.sh  build_ffmpeg_win.sh
src/: ByteData.cpp  MediaFormat.cpp
src/audio/: AudioUtils.h
src/audio/decode/: FFmpegAudioDecoder.cpp  FFmpegAudioDecoder.h
src/audio/demux/: FFmpegAudioDemuxer.cpp  FFmpegAudioDemuxer.h
src/audio/process/: AudioFormatConverter.cpp  AudioFormatConverter.h
src/export/: FFmpegAudioEncoder.cpp  FFmpegAudioEncoder.h  FFmpegMuxer.cpp  FFmpegMuxer.h  FFmpegVideoEncoder.cpp  FFmpegVideoEncoder.h
src/utils/: FFmpegUtils.cpp  FFmpegUtils.h  LockGuard.h  StringUtils.h
src/video/decoder/: FFAVCDecoder.cpp  FFAVCDecoder.h
src/video/demuxer/: FFmpegVideoDemuxer.cpp  FFmpegVideoDemuxer.h
